Fix x overflow

--- a/assignments/twitch/RW-Twitch/src/styles/styles.scss
+++ b/assignments/twitch/RW-Twitch/src/styles/styles.scss
@@ -1,6 +1,7 @@
 #react-container {
   display: block;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .page-sidebar {
